--- a/bin/pom.xml
+++ b/bin/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>Webgoat</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>Webgoat</name>
-	<description>Demo project for Spring Boot from developer1</description>
+	<description>Demo project for Spring Boot</description>
 	<url/>
 	<licenses>
 		<license/>
